--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="azeret-mono-normal">
-    <header class="head-1">
+    <header class="header">
         <nav>
             <h3 class="h3-title">sondip</h3>
             <ul>
