an added section2 index.html file

--- a/index.html
+++ b/index.html
@@ -62,30 +62,33 @@
 
                  <div class="sections-items">
                     <img src="./assets/Group 4.png" alt="loading image">
-                    
+
                     <div class="section-items3">
                         <h2 class="heading-4">I will Do Coding and Change The World</h2>
                         <p class="profile3-para">yes i do coding i will change </p>
                         <button class="learn-btn">learn more</button>
                     </div>
                  </div>
+                </section>
+
+                    <!-- my inspiration  -->
+                    <section class="section-2">
+                        <div class="sections-1">
+                           <div class="inspirations">
+                            <h2 class="heading-5">My Inspiration</h2>
+                            <p class="para-5">my inspiration jhankar mahabub vie .i follow jhankar mahabub vie .this man are very qualityful</p>
+
+                            <iframe class="text-1" width="560" height="315" src="https://www.youtube.com/embed/DGHn2uOAVCE?si=y_3So_JghZsOyl-F" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+                           </div>
 
 
 
+                        </div>
+                    </section>    
 
 
 
-
-
-
-
-            
-
-
-
-
-
-        </section>
 
     </main>
 
