an added section3 index.html

--- a/index.html
+++ b/index.html
@@ -79,15 +79,50 @@
                             <p class="para-5">my inspiration jhankar mahabub vie .i follow jhankar mahabub vie .this man are very qualityful</p>
 
                             <iframe class="text-1" width="560" height="315" src="https://www.youtube.com/embed/DGHn2uOAVCE?si=y_3So_JghZsOyl-F" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-
                            </div>
-
-
-
                         </div>
                     </section>    
 
+                        <!-- my current target -->
+       <section class="tech-1">
 
+        <h2 class="heading-6">My Current Target</h2>
+        <p class="para-6">my target is front-end technology.front end technology name is html css js and other .but my target 3skill marstery</p>
+
+        <div class="tech-container">
+            <div class="html-1">
+                <img src="./assets/html.png" alt="loading page">
+                <h3 class="html-title">HTML</h3>
+                <p class="html-para">hyper text mark up language</p><br>
+               <button class="btn-primary"><u>learn more</u></button>
+            </div>
+
+            <div class="css-1">
+                <img src="./assets/css.png" alt="loading page">
+                <h3 class="html-title">css</h3>
+                <p class="html-para">cascadin style sheet </p><br>
+                <button class="btn-primary"><u>learn more</u></button>
+            </div>
+
+
+            <div class="js-1">
+                <img src="./assets/js.png" alt="loading page">
+                <h3 class="html-title">js</h3>
+                <p class="html-para">javascript langugae.it is a easy to learn </p><br>
+                <button class="btn-primary"><u>learn more</u></button>
+            </div>
+
+
+
+
+        </div>
+
+
+
+
+
+
+       </section>                  
 
 
     </main>
