an added section 5 index.html feli

--- a/index.html
+++ b/index.html
@@ -132,7 +132,8 @@
 
     <footer class="footer-1" >
         <div class="footer-col">
-            <p class="para-10">An Open Commitment by Awlad Hossain</p>
+
+            <p class="para-10">An Open Commitment by  shree sondip kumar sarkar</p>
         </div>
 
         <div class="image-1">
